fix: JDK17 compat - replace List.getFirst() with get(0) in Issue4960LSMReloadCompactionCounterTest